removed unnecessary files

--- a/prototype/app/index.html
+++ b/prototype/app/index.html
@@ -9,12 +9,12 @@
       tstCurrentDate = "2011/02/21";
       var tt_cancel_destination = null;
     </script>
-    <link href="home_files/mateme.css" media="screen" rel="stylesheet" type="text/css">
-    <link href="home_files/graph.css" media="screen" rel="stylesheet" type="text/css">
-    <link href="home_files/touch-fancy.css" media="screen" rel="stylesheet" type="text/css">
-    <link href="home_files/tabs.css" media="screen" rel="stylesheet" type="text/css">
-    <link href="home_files/miscellaneous.css" media="screen" rel="stylesheet" type="text/css">
-    <script src="home_files/preload.js" type="text/javascript"></script>
+    <link href="../stylesheets/mateme.css" media="screen" rel="stylesheet" type="text/css">
+    <link href="../stylesheets/graph.css" media="screen" rel="stylesheet" type="text/css">
+    <link href="../stylesheets/touch-fancy.css" media="screen" rel="stylesheet" type="text/css">
+    <link href="../stylesheets/tabs.css" media="screen" rel="stylesheet" type="text/css">
+    <link href="../stylesheets/miscellaneous.css" media="screen" rel="stylesheet" type="text/css">
+    <script src="../javascripts/preload.js" type="text/javascript"></script>
     <script type="text/javascript" language="javascript" src="home_files/utils.js"></script>
     
     <div id="container">
@@ -26,7 +26,7 @@
         var plot;
 
         </script>
-        <script src="home_files/utils_002.js" type="text/javascript"></script>
+        <script src="../javascripts/utils_002.js" type="text/javascript"></script>
         <div style="margin: 10px;">
           <div id="details" style="float: left;">
             <div id="health-facility-info" class="gadget">
