--- a/prototype/app/index.html
+++ b/prototype/app/index.html
@@ -1,60 +1,48 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml" lang="en"><head>
-
-  
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-      </head><body id="mateme">Patients Show
+<html>
+  <head>
+    <title>Register A Client</title>
+    <meta http-equiv='content-type' content='text/html;charset=UTF-8' />
+    <script language='javascript' type='text/javascript' src='../javascripts/jquery.js'></script>
+    <script language="javascript" type="text/javascript" src="../javascripts/jquery.flot.js"></script>
     <script language="javascript">
-      tstUsername = "eds";
-      tstCurrentDate = "2011/02/21";
-      var tt_cancel_destination = null;
+      tstUsername = "";
+      tstCurrentDate = "2010/03/12";
+      tt_cancel_destination = '';
+      tt_cancel_show = 'application_dashboard.html';
     </script>
-    <link href="../stylesheets/mateme.css" media="screen" rel="stylesheet" type="text/css">
-    <link href="../stylesheets/graph.css" media="screen" rel="stylesheet" type="text/css">
-    <link href="../stylesheets/touch-fancy.css" media="screen" rel="stylesheet" type="text/css">
-    <link href="../stylesheets/tabs.css" media="screen" rel="stylesheet" type="text/css">
-    <link href="../stylesheets/miscellaneous.css" media="screen" rel="stylesheet" type="text/css">
-    <script src="../javascripts/preload.js" type="text/javascript"></script>
-    <script type="text/javascript" language="javascript" src="home_files/utils.js"></script>
-    
-    <div id="container">
-      <div id="content">
-        <div id="description" style="color: rgb(119, 119, 119); position: absolute; margin-top: -70px;"> </div>
-        <div style="padding-left: 15px; font-size: 1.2em;"> </div>
-        <script type="text/javascript">
-        tt_cancel_destination = 'registration.html';
-        var plot;
-
-        </script>
-        <script src="../javascripts/utils_002.js" type="text/javascript"></script>
-        <div style="margin: 10px;">
-          <div id="details" style="float: left;">
-            <div id="health-facility-info" class="gadget">
-              <div class="gadget-row">
-                <div id="Sytem-info" class="gadget-cell">
-                  <h2>Hotline System</h2>
-                  <h3>Chilambe Health Center - <i>Hotline</i></h3>
-                </div>
-
-                <div id="username" class="gadget-cell" style="float: right;">
-                  <i>You are not logged in</i>
-                </div>
-              </div>
-            </div>
-            </div>
-          <div id="menu" class="">
-              <a class="button green" href="login.html">Login</a>
-              </div>
-              </div>
-
-              <div id="footer">
-              <div id="buttons" class="buttonsDiv" style="top: 0px;">
-              </button>
-              </div>
-              <div id="tt_extraButtons">
-              </div>
-
-             
-      </div>
+    <link href="../stylesheets/form.css" media="screen" rel="stylesheet" type="text/css" />
+    <link href="../stylesheets/touch-fancy.css" media="screen" rel="stylesheet" type="text/css" />
+    <!-- Uncomment/Comment the line below to enable/disable the Touchscreen Toolkit-->
+    <script src="../javascripts/touchscreen.js?1266397276" type="text/javascript"></script>
+  </head>
+  <body id='container'>
+    <div id='content'>
+      <div id='description' style='color:#777;position:absolute;margin-top:-70px;'></div>
+      <center>
+        <form action='application_dashboard.html' method='POST'>
+          <table cellpadding=10>
+            <tr>
+              <th colspan=2>Register A Client</th>
+            </tr>
+            <tr>
+              <td>Username</td>
+              <td>
+                <input type='text' value='Milimbo' name='last_name' id='last_name' helptext='Username' />
+              </td>
+            </tr>
+            <td>Password</td>
+            <td>
+              <input type='password' value='' name='last_name' id='last_name' helptext='Last Name' />
+            </td>
+            </tr>
+            <td align='center'>
+              <input type='submit' value='Finish' />
+            </td>
+            </tr>
+          </table>
+        </form>
+      </center>
+      <div id="footer"> </div>
     </div>
-  </div></body></html>
+  </body>
+</html>
