--- a/prototype/app/select_clinic.html
+++ b/prototype/app/select_clinic.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Client Diagnosis</title>
+<title>Clinic List</title>
 <meta http-equiv='content-type' content='text/html;charset=UTF-8' />
 <script language='javascript' type='text/javascript' src='javascripts/jquery.js'></script>
 <script language="javascript" type="text/javascript" src="../javascripts/jquery.flot.js"></script>
@@ -20,29 +20,25 @@ tt_cancel_show = '';
 <body id='container'>
 <div id='content'>
 <div id='description' style='color:#777;position:absolute;margin-top:-70px;'></div><center>
-<form action='outcome.html'>
+<form action='clinic_days.html'>
 <table cellpadding=10>
 <tr>
-<th colspan=2>Client Diagnosis</th>
+<th colspan=2>Outcome</th>
 </tr>
 <tr>
-<td>Record Problem</td>
+<td>Select Health Center/Hospital</td>
 <td>
-<input type='text' value='Headache' name='record_problem' id='record_problem' helptext='Record Problem' />
+<select style='width: 100%' name='select_clinic' id='select_clinic' helptext='Select Health Center or Hospital'>
+<option></option>
+<option>Chilaweni</option>
+<option>Kalembo</option>
+<option>Kalindize</option>
+<option>Makanjira</option>
+<option>Mpatula</option>
+</select>
 </td>
 </tr>
-<tr>
-<td>Record Second Problem</td>
-<td>
-<input type='text' value='Fever' name='record_second_problem' id='record_second_problem' helptext='Record Second Problem' />
-</td>
-</tr>
-<tr>
-<td>Record Third Problem</td>
-<td>
-<input type='text' value='Cough' name='record_third_problem' id='record_third_problem' helptext='Record Third Problem' />
-</td>
-</tr>
+
 <tr>
 <td align='center'>
 <input type='submit' value='Finish' />
@@ -53,6 +49,6 @@ tt_cancel_show = '';
 </center>
 <div id="footer"> </div> 
 </div>
-
+</div>
 </body>
 </html>
