--- a/prototype/app/index.html
+++ b/prototype/app/index.html
@@ -32,7 +32,7 @@
             </tr>
             <td>Password</td>
             <td>
-              <input type='password' value='' name='last_name' id='last_name' helptext='Last Name' />
+              <input type='password' value='' name='last_name' id='last_name' helptext='Password' />
             </td>
             </tr>
             <td align='center'>
