--- a/prototype/app/patient_dashboard.html
+++ b/prototype/app/patient_dashboard.html
@@ -93,7 +93,7 @@
         <div id="menu" style="vertical-align:">
           <button id="finish" class="blue menu-button" onmousedown="window.location = 'diagnosis.html'"><span>Diagnosis</span></button> <br/>
           <button id="finish" class="blue menu-button" onmousedown="window.location = 'select_clinic.html'"><span>Clinic Schedules</span></button> <br/>
-          <button id="finish" class="blue menu-button" onmousedown="window.location = 'diagnosis.html'"><span>Tips and Reminders</span></button> <br/>
+          <button id="finish" class="blue menu-button" onmousedown="window.location = 'tips_and_reminders.html'"><span>Tips and Reminders</span></button> <br/>
 
         </div>
       </div>
