--- a/prototype/app/diagnosis.html
+++ b/prototype/app/diagnosis.html
@@ -2,7 +2,8 @@
 <head>
 <title>Client Diagnosis</title>
 <meta http-equiv='content-type' content='text/html;charset=UTF-8' />
-<script language='javascript' type='text/javascript' src='javascripts/jquery.js'></script>
+
+<script language='javascript' type='text/javascript' src='../javascripts/jquery.js'></script>
 <script language="javascript" type="text/javascript" src="../javascripts/jquery.flot.js"></script>
 <script language="javascript">
 tstUsername = "";
@@ -26,23 +27,19 @@ tt_cancel_show = '';
 <th colspan=2>Client Diagnosis</th>
 </tr>
 <tr>
-<td>Record Problem</td>
+<td>Select problem</td>
 <td>
-<input type='text' value='Headache' name='record_problem' id='record_problem' helptext='Record Problem' />
+<select style='width: 100%' name='select_problem' id='select_problem' helptext='Select Problem'>
+<option></option>
+<option>Problem 1</option>
+<option>Problem 2</option>
+<option>Problem 3</option>
+<option>Problem 4</option>
+<option>Problem 5</option>
+</select>
 </td>
 </tr>
-<tr>
-<td>Record Second Problem</td>
-<td>
-<input type='text' value='Fever' name='record_second_problem' id='record_second_problem' helptext='Record Second Problem' />
-</td>
-</tr>
-<tr>
-<td>Record Third Problem</td>
-<td>
-<input type='text' value='Cough' name='record_third_problem' id='record_third_problem' helptext='Record Third Problem' />
-</td>
-</tr>
+<input id="source_url" name="source_url" type="hidden" value="diagnosis" />
 <tr>
 <td align='center'>
 <input type='submit' value='Finish' />
