--- a/prototype/app/outcome.html
+++ b/prototype/app/outcome.html
@@ -2,13 +2,28 @@
 <head>
 <title>Outcome</title>
 <meta http-equiv='content-type' content='text/html;charset=UTF-8' />
-<script language='javascript' type='text/javascript' src='javascripts/jquery.js'></script>
+<script language='javascript' type='text/javascript' src='../javascripts/utils.js'></script>
+<script language='javascript' type='text/javascript' src='../javascripts/jquery.js'></script>
 <script language="javascript" type="text/javascript" src="../javascripts/jquery.flot.js"></script>
 <script language="javascript">
-tstUsername = "";
-tstCurrentDate = "2010/03/12";
+tstUsername     = "";
+tstCurrentDate  = "2010/03/12";
 tt_cancel_destination = 'patient_dashboard.html';
-tt_cancel_show = '';
+tt_cancel_show  = '';
+function change_url(){
+  if($('select_outcome').value != "Given Advice"){
+    document.outForm.action = "select_clinic.html";
+    return true;
+  }
+  else{
+    document.outForm.action = tt_cancel_destination;
+    return false;
+  }
+}
+
+function update_source_url(){
+  $("source_url").value = grep_url_params("source_url");
+}
 </script>
 <link href="../stylesheets/form.css?1266397276" media="screen" rel="stylesheet" type="text/css" />
 <link href="../stylesheets/touch-fancy.css?1266397276" media="screen" rel="stylesheet" type="text/css" />
@@ -20,7 +35,7 @@ tt_cancel_show = '';
 <body id='container'>
 <div id='content'>
 <div id='description' style='color:#777;position:absolute;margin-top:-70px;'></div><center>
-<form action='patient_dashboard.html'>
+<form name="outForm" action='patient_dashboard.html'>
 <table cellpadding=10>
 <tr>
 <th colspan=2>Outcome</th>
@@ -28,7 +43,7 @@ tt_cancel_show = '';
 <tr>
 <td>Select Outcome</td>
 <td>
-<select style='width: 100%' name='select_outcome' id='select_outcome' helptext='Select Outcome'>
+<select style='width: 100%' name='select_outcome' id='select_outcome' helptext='Select Outcome' tt_onUnLoad ="change_url(); update_source_url();">
 <option></option>
 <option>Given Advice</option>
 <option>Advised to Referred to a Health Center </option>
@@ -36,59 +51,7 @@ tt_cancel_show = '';
 </select>
 </td>
 </tr>
-
-<tr>
-<td>Enrol for Tips and Reminders Program</td>
-<td>
-<select style='width: 100%' name='tips_and_reminders' id='tips_and_reminders' helptext='Enrol for Tips and Reminders Program'>
-<option></option>
-<option>Yes</option>
-<option>No</option>
-</select>
-</td>
-</tr>
-
-
-<tr>
-<td>Select Type of Messages</td>
-<td>
-<select style='width: 100%' name='type_of_tips_and_reminders' id='type_of_tips_and_reminders' condition= "$('tips_and_reminders').value == 'Yes'" helptext='Select Type of Messages'>
-<option></option>
-<option>Nutrition</option>
-<option>Pregnancy Advice</option>
-</select>
-</td>
-</tr>
-
-<tr>
-<td>Select Language</td>
-<td>
-<select style='width: 100%' name='language' id='language' condition= "$('tips_and_reminders').value == 'Yes'" helptext='Select Language'>
-<option></option>
-<option>Chichewa</option>
-<option>English</option>
-</select>
-</td>
-</tr>
-
-<tr>
-<td>Form of Tips and Reminders</td>
-<td>
-<select style='width: 100%' name='form_of_tips_and_reminders' id='form_of_tips_and_reminders' condition= "$('tips_and_reminders').value == 'Yes'" helptext='Form of Tips and Reminders'>
-<option></option>
-<option>Text Messages</option>
-<option>Voice call</option>
-</select>
-</td>
-</tr>
-
-<tr>
-<td>Destination Phone Number</td>
-<td>
-<input type='text' field_type='number' value='' name='destination_phone_number' id='destination_phone_number' condition= "$('tips_and_reminders').value == 'Yes'" helptext='Destination Phone Number' />
-</td>
-</tr>
-
+<input id="source_url" name="source_url" type="hidden" value="" />
 <tr>
 <td align='center'>
 <input type='submit' value='Finish' />
