--- a/prototype/app/select_clinic.html
+++ b/prototype/app/select_clinic.html
@@ -2,13 +2,18 @@
 <head>
 <title>Clinic List</title>
 <meta http-equiv='content-type' content='text/html;charset=UTF-8' />
-<script language='javascript' type='text/javascript' src='javascripts/jquery.js'></script>
+<script language='javascript' type='text/javascript' src='../javascripts/utils.js'></script>
+<script language='javascript' type='text/javascript' src='../javascripts/jquery.js'></script>
 <script language="javascript" type="text/javascript" src="../javascripts/jquery.flot.js"></script>
 <script language="javascript">
 tstUsername = "";
 tstCurrentDate = "2010/03/12";
 tt_cancel_destination = 'patient_dashboard.html';
 tt_cancel_show = '';
+
+function update_source_url(){
+  $("source_url").value = grep_url_params("source_url");
+}
 </script>
 <link href="../stylesheets/form.css?1266397276" media="screen" rel="stylesheet" type="text/css" />
 <link href="../stylesheets/touch-fancy.css?1266397276" media="screen" rel="stylesheet" type="text/css" />
@@ -28,7 +33,7 @@ tt_cancel_show = '';
 <tr>
 <td>Select Health Center/Hospital</td>
 <td>
-<select style='width: 100%' name='select_clinic' id='select_clinic' helptext='Select Health Center or Hospital'>
+<select style='width: 100%' name='select_clinic' id='select_clinic' helptext='Select Health Center or Hospital' tt_onUnLoad ="update_source_url();">
 <option></option>
 <option>Chilaweni</option>
 <option>Kalembo</option>
@@ -38,7 +43,7 @@ tt_cancel_show = '';
 </select>
 </td>
 </tr>
-
+<input id="source_url" name="source_url" type="hidden" value="" />
 <tr>
 <td align='center'>
 <input type='submit' value='Finish' />
