--- a/prototype/app/clinic_days.html
+++ b/prototype/app/clinic_days.html
@@ -21,31 +21,14 @@
           return 'patient_dashboard.html'
       }
     </script>
-    <style type="text/css">
-      #barcode {
-        background:transparent none repeat scroll 0 0;
-        border-color:-moz-use-text-color -moz-use-text-color silver;
-        border-style:none none solid;
-        border-width:medium medium 1px;
-        font-family:"Nimbus Sans L","Arial Narrow",sans-serif;
-        font-size:2.2em;
-        padding-left:5px;
-        width:400px;
-      }
-      #header div {
-        font-weight:normal;
-        float:none;
-        clear:both;
-      }
-    </style>
   </head>
 
   <body id="container">
     <div id="content">
-      <div id="header" style="height: 160px; margin-top: -15px; padding-left: 20px;">
-        <h1>Chilambe Health Center</h1>
-        <div id="version" style="padding-top: 44px;">Hotline System - <span>Wednesday, 09-Mar-2011</span></div>
-        <div id="user" style="margin-top: -4px;">Logged in as ceekays</div>
+      <div id="header" style="padding-bottom:50px;">
+        <div id="facility-name">Chilambe Health Center</div>
+        <div id="app-version">Hotline System - <span>Wednesday, 09-Mar-2011</span></div>
+        <div id="user">Logged in as ceekays</div>
       </div>
 
       <div id="nav" class="nav">
